@@ -1,6 +1,7 @@
 r19-mod-6.6
 -Allow all VS versions with API4.
 -Remove option that reloads script from disk before evaluation.
+-Add option to periodically reload script from disk to sync with external changes.
 -Add an asterisk in preview window title that indicates change in text editor.
 
 r19-mod-6.5
